# TestFortran

./: CMakeLists.txt  README
SOURCES/: pardiso.lic  pardiso_sym.f  pardiso_sym.f90
